Updates to sorted user lists

--- a/app/views/v7/l2/users/view/all.html
+++ b/app/views/v7/l2/users/view/all.html
@@ -88,7 +88,7 @@
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Albert Morris</a></th>
                     <td class="govuk-table__cell">London Borough of Croydon Council</td>
-                    <td class="govuk-table__cell">Active</td>
+                    <td class="govuk-table__cell">Access expired</td>
                 </tr>
 
                 <tr class="govuk-table__row">
