--- a/app/views/v7/l2/users/view/includes/user-view-heading-add-search.html
+++ b/app/views/v7/l2/users/view/includes/user-view-heading-add-search.html
@@ -1,7 +1,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-one-half">
                 <h1 class="govuk-heading-l listing-page">Users</h1>
-                <a href="../add/start" class="govuk-button listing-page">
+                <a href="/v7/l2/users/add/start" class="govuk-button listing-page">
                     Add a user
                 </a>
             </div>
