--- a/app/views/v7/l2/users/view/sorted/all-by-name-reverse.html
+++ b/app/views/v7/l2/users/view/sorted/all-by-name-reverse.html
@@ -70,7 +70,7 @@
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tony Yeboah</a></th>
                     <td class="govuk-table__cell">Remploy</td>
-                    <td class="govuk-table__cell ">Active</td>
+                    <td class="govuk-table__cell ">Access expired</td>
                 </tr>
 
                 <tr class="govuk-table__row">
@@ -97,7 +97,7 @@
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tina Windass</a></th>
                     <td class="govuk-table__cell">London Borough of Croydon Council</td>
-                    <td class="govuk-table__cell">Active</td>
+                    <td class="govuk-table__cell">Invite sent</td>
                 </tr>
 
                 <tr class="govuk-table__row">
@@ -115,7 +115,7 @@
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Sam Bolton</a></th>
                     <td class="govuk-table__cell">London Borough of Croydon Council</td>
-                    <td class="govuk-table__cell">Active</td>
+                    <td class="govuk-table__cell">Access expired</td>
                 </tr>
 
                 <tr class="govuk-table__row">
@@ -127,13 +127,13 @@
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robson Green</a></th>
                     <td class="govuk-table__cell">G4S</td>
-                    <td class="govuk-table__cell">Active</td>
+                    <td class="govuk-table__cell">Invite sent</td>
                 </tr>
 
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robert Molenaar</a></th>
                     <td class="govuk-table__cell">Remploy</td>
-                    <td class="govuk-table__cell">Active</td>
+                    <td class="govuk-table__cell">Invite sent</td>
                 </tr>
 
             
@@ -153,7 +153,7 @@
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Randy Leeming</a></th>
                     <td class="govuk-table__cell">G4S</td>
-                    <td class="govuk-table__cell ">Active</td>
+                    <td class="govuk-table__cell ">Invite sent</td>
                 </tr>
 
                 <tr class="govuk-table__row">
