--- a/app/views/v7/l2/users/view/sorted/all-by-status-reverse.html
+++ b/app/views/v7/l2/users/view/sorted/all-by-status-reverse.html
@@ -39,17 +39,44 @@
             </thead>
 
             <tbody class="govuk-table__body">
-                <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Donald Revie</a></th>
-                    <td class="govuk-table__cell">Serco</td>
-                    <td class="govuk-table__cell">Invite expired</td>
+
+                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Adam McCluskey</a></th>
+                    <td class="govuk-table__cell">G4S</td>
+                    <td class="govuk-table__cell">Invite sent</td>
                 </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Andrew Weatherall</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Invite sent</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ben Jones</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Invite sent</td>
+                </tr>
+                
 
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Whyte</a></th>
                     <td class="govuk-table__cell">Capita</td>
                     <td class="govuk-table__cell">Invite sent</td>
                 </tr>
+
+                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Claire Simpson</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Invite sent</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Emma Harvey</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Invite sent</td>
+                </tr>
+
 
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gordon Strachan</a></th>
@@ -76,7 +103,45 @@
                 </tr>
 
                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Donald Revie</a></th>
+                    <td class="govuk-table__cell">Serco</td>
+                    <td class="govuk-table__cell">Invite expired</td>
+                </tr>
+
+
+                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Donna Sharp</a></th>
+                    <td class="govuk-table__cell">Serco</td>
+                    <td class="govuk-table__cell">Invite expired</td>
+                </tr>
+
+                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Stuart Read</a></th>
+                    <td class="govuk-table__cell">Serco</td>
+                    <td class="govuk-table__cell">Invite expired</td>
+                </tr>
+
+                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tim Burton</a></th>
+                    <td class="govuk-table__cell">Serco</td>
+                    <td class="govuk-table__cell">Invite expired</td>
+                </tr>
+
+                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tom Jones</a></th>
+                    <td class="govuk-table__cell">Serco</td>
+                    <td class="govuk-table__cell">Invite expired</td>
+                </tr>
+                
+
+                <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bruce Sandison</a></th>
+                    <td class="govuk-table__cell">G4S</td>
+                    <td class="govuk-table__cell">Access expired</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Clare Randall</a></th>
                     <td class="govuk-table__cell">G4S</td>
                     <td class="govuk-table__cell">Access expired</td>
                 </tr>
@@ -103,7 +168,7 @@
 
         <nav role="navigation" aria-label="Pagination">
             <div class="pagination__summary">
-                Showing 1 &ndash; 10 of 74 users
+                Showing 1 &ndash; 20 of 74 users
             </div>
 
             <ul class="pagination">
