--- a/app/views/v7/l2/users/view/sorted/all-by-org-reverse.html
+++ b/app/views/v7/l2/users/view/sorted/all-by-org-reverse.html
@@ -97,12 +97,76 @@
                     <td class="govuk-table__cell">Remploy</td>
                     <td class="govuk-table__cell">Active</td>
                 </tr>
+
+
+
+
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Carl Shutt</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Catherine Palmer</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Kamara</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                    <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Hopkin</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Rocastle</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David White</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                    <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Weatherall</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Debbie Kerr</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Frank Strandli</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Imre Varadi</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
             </tbody>
         </table>
 
         <nav role="navigation" aria-label="Pagination">
             <div class="pagination__summary">
-                Showing 1 &ndash; 10 of 74 users
+                Showing 1 &ndash; 20 of 74 users
             </div>
 
             <ul class="pagination">
