--- a/app/views/v7/l2/users/view/sorted/all-by-org.html
+++ b/app/views/v7/l2/users/view/sorted/all-by-org.html
@@ -42,6 +42,36 @@
 
             <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Abby Hammond</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Andrew Weatherall</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ben Jarvis</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ben Smith</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ben Jones</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Fairclough</a></th>
                     <td class="govuk-table__cell">Capita</td>
                     <td class="govuk-table__cell">Active</td>
@@ -60,7 +90,20 @@
                 </tr>
 
                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Claire Underwood</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Access expired</td>
+                </tr>
+
+
+                <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary McAllister</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gabby Keane</a></th>
                     <td class="govuk-table__cell">Capita</td>
                     <td class="govuk-table__cell">Active</td>
                 </tr>
@@ -75,6 +118,18 @@
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gordon Strachan</a></th>
                     <td class="govuk-table__cell">Capita</td>
                     <td class="govuk-table__cell">Invite sent</td>
+                </tr>
+
+                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jennifer Smith</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell ">Active</td>
+                </tr>
+
+                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jenny Lewis</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell ">Active</td>
                 </tr>
 
                 <tr class="govuk-table__row">
@@ -96,6 +151,12 @@
                 </tr>
 
                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Lucy Ward</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mel Sterland</a></th>
                     <td class="govuk-table__cell">Capita</td>
                     <td class="govuk-table__cell">Active</td>
@@ -105,7 +166,7 @@
 
         <nav role="navigation" aria-label="Pagination">
             <div class="pagination__summary">
-                Showing 1 &ndash; 10 of 74 users
+                Showing 1 &ndash; 20 of 74 users
             </div>
 
             <ul class="pagination">
