Updates to user list and signin

--- a/app/views/v7/l4/signin.html
+++ b/app/views/v7/l4/signin.html
@@ -60,7 +60,7 @@
 
         <ul class="govuk-list signin">
             <li>
-                <a href="#" class="govuk-link">I forgot my password</a>
+                <a href="users/reset-password/start" class="govuk-link">I forgot my password</a>
             </li>
             <li>
                 {{ govukDetails({
