--- a/app/views/v7/l2/users/view/all-3.html
+++ b/app/views/v7/l2/users/view/all-3.html
@@ -19,41 +19,45 @@
         {% include "./includes/user-view-table-head.html" %}
 
         <tbody class="govuk-table__body">
+            
+
+               <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Deborah Smith</a></th>
+                <td class="govuk-table__cell">Capita</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Weatherall</a></th>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Denise Henderson</a></th>
+                <td class="govuk-table__cell">Capita</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Donald Revie</a></th>
+                <td class="govuk-table__cell">Serco</td>
+                <td class="govuk-table__cell">Invite expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Donna Sharp</a></th>
                 <td class="govuk-table__cell">Remploy</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David White</a></th>
-                <td class="govuk-table__cell">Remploy</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Eddie Binks</a></th>
+                <td class="govuk-table__cell">Serco</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Dean Macey</a></th>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Eric Williams</a></th>
                 <td class="govuk-table__cell">G4S</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Debbie Kerr</a></th>
-                <td class="govuk-table__cell">Remploy</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Donald Revie</a></th>
-                <td class="govuk-table__cell">Serco</td>
-                <td class="govuk-table__cell">Invite expired</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Donald Revie</a></th>
-                <td class="govuk-table__cell">Serco</td>
-                <td class="govuk-table__cell">Invite expired</td>
-            </tr>
+            
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Edward Gray</a></th>
@@ -83,7 +87,7 @@
 
     <nav role="navigation" aria-label="Pagination">
         <div class="pagination__summary">
-            Showing 21 &ndash; 30 of 74 users
+            Showing 41 &ndash; 60 of 154 users
         </div>
 
         <ul class="pagination">
