--- a/app/views/v7/l3/users/view/single-hs.html
+++ b/app/views/v7/l3/users/view/single-hs.html
@@ -66,7 +66,7 @@
                             text: "Status"
                         },
                         value: {
-                            text: "Access expired"
+                            text: "Invite expired"
                         }
                     },
                     {
