Fixed add new user bugs on L3

--- a/app/views/v7/l3/users/view/all.html
+++ b/app/views/v7/l3/users/view/all.html
@@ -37,7 +37,7 @@
         </thead>
 
         <tbody class="govuk-table__body">
-            {% if data['organisation-name'] == 'Capita' %}
+            {% if data['user-first-name'] %}
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">
                         <a href="single" class="govuk-link">
