--- a/app/views/v7/l3/users/view/single.html
+++ b/app/views/v7/l3/users/view/single.html
@@ -58,7 +58,7 @@
                             text: "Organisation"
                         },
                         value: {
-                            text: data['organisation-name']
+                            text: data['prototype-organisation'] 
                         }
                     },
                     {
