--- a/app/views/v7/l2/users/register/password.html
+++ b/app/views/v7/l2/users/register/password.html
@@ -25,7 +25,7 @@
         <div class="govuk-grid-column-two-thirds">
             {% include 'includes/password-error-summary.njk' %}
 
-            <form id="tpas_password_form" method="post" class="form" action="register-branch">
+            <form id="tpas_password_form" method="post" class="form" action="{% if data['prototype-mfa'] === 'single' %}complete{% else %}mobile{% endif %}">
                 <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint passport-issued-error">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                         <h1 class="govuk-fieldset__heading">Create a password</h1>
@@ -68,6 +68,7 @@
                     </button>
 
                     <input type="hidden" id="prototype-service" name="prototype-service" value="{{ data['prototype-service'] }}">
+                    <input type="hidden" id="prototype-mfa" name="prototype-mfa" value="{{ data['prototype-mfa'] }}">
                 </fieldset>
             </form>
         </div>
