--- a/app/views/v7/l2/users/register/start.html
+++ b/app/views/v7/l2/users/register/start.html
@@ -27,13 +27,13 @@
 
             <p>Registering your account with DWP Authenticate will let you have access as an admin for {{ data['prototype-service'] }} service.</p>
 
-
             {{ govukButton({
                 text: "Start registration",
                 href: "password.html",
                 isStartButton: true
             }) }}
 
+            {% if data['prototype-mfa'] === 'multiple' %}
             <h2 class="govuk-heading-m govuk-!-margin-top-6">Before you start</h2>
 
             <p>You'll need your mobile phone.</p>
@@ -41,6 +41,7 @@
             <p>
                 After you have registered, we will send you a code to your mobile whenever you want to sign in. This makes the service more secure by proving it is you signing in.
             </p>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
