--- a/app/views/v7/l2/users/reset-password/password.html
+++ b/app/views/v7/l2/users/reset-password/password.html
@@ -25,40 +25,43 @@
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l">Create a new password</h1>
 
-                    <p>Your password must be 8 characters or more.</p>
+            <p>Your password must be 8 characters or more.</p>
 
-                    <p>It must include at least:</p>
+            <p>It must include at least:</p>
 
-                    <ul class="govuk-list govuk-list--bullet">
-                        <li>one upper case letter</li>
-                        <li>one lower case letter</li>
-                        <li>one number</li>
-                        <li>one special character</li>
-                    </ul>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>one upper case letter</li>
+                <li>one lower case letter</li>
+                <li>one number</li>
+                <li>one special character</li>
+            </ul>
 
-                    {{ govukDetails({
-                        summaryText: "Which special characters can I use?",
-                        html: 'You can use the following special characters: @ # $ % ^ & * - _ ; ! + = [ ] { } | \ : ‘ , . ? / ` ~ " ( ) '
-                      }) }}
-
-            <div class="govuk-form-group govuk-!-margin-top-6">
-                <label class="govuk-label" for="width-20">
-                    Enter new password
-                </label>
-                <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="password">
-            </div>
-
-            <div class="govuk-form-group">
-                <label class="govuk-label" for="width-20">
-                    Confirm new password
-                </label>
-                <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="password">
-            </div>
-
-            {{ govukButton({
-                text: "Create new password",
-                href: "confirmation.html"
+            {{ govukDetails({
+                summaryText: "Which special characters can I use?",
+                html: 'You can use the following special characters: @ # $ % ^ & * - _ ; ! + = [ ] { } | \ : ‘ , . ? / ` ~ " ( ) '
             }) }}
+
+            <form method="post" class="form" action="confirmation">
+                <fieldset class="govuk-fieldset">
+                    <div class="govuk-form-group govuk-!-margin-top-6">
+                        <label class="govuk-label" for="width-20">
+                            Enter new password
+                        </label>
+                        <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="password">
+                    </div>
+
+                    <div class="govuk-form-group">
+                        <label class="govuk-label" for="width-20">
+                            Confirm new password
+                        </label>
+                        <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="password">
+                    </div>
+
+                    {{ govukButton({
+                        text: "Create new password"
+                    }) }}
+                </fieldset>
+            </form>
         </div>
     </div>
 {% endblock %}
