Updates to confidence levels

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -215,7 +215,6 @@
                         <th class="govuk-table__header" scope="col">Confidence</th>
                         <th class="govuk-table__header" scope="col">Dev Ready</th>
                         <th class="govuk-table__header govuk-!-width-one-third" scope="col">Notes</th>
-
                     </tr>
                 </thead>
 
@@ -227,33 +226,32 @@
                         <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
                     </tr>
 
-                <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/users/register/email">Register email</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
                         <td class="govuk-table__cell"></td>
-                        <td class="govuk-table__cell">Design iterated following research, needs validating</td>
+                        <td class="govuk-table__cell">Iteration tested well in the most recent round of research</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v7/l2/users/register/password">Create new password</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/register/password">Password creation during registration</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
                         <td class="govuk-table__cell"></td>
-                        <td class="govuk-table__cell">Design iterated following research, needs validating</td>
+                        <td class="govuk-table__cell">Iteration tested well in the most recent round of research</td>
                     </tr>
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/users/register/mobile">Mobile 2FA</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
                         <td class="govuk-table__cell"></td>
-                        <td class="govuk-table__cell">Design iterated following research, needs validating</td>
+                        <td class="govuk-table__cell">Tested well but want to check again when live</td>
                     </tr>
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/users/register/app-check">App or text message question</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
                         <td class="govuk-table__cell"></td>
-                        <td class="govuk-table__cell">Concerns that content is leading, needs review</td>
+                        <td class="govuk-table__cell">Iteration tested well in the most recent round of research</td>
                     </tr>
 
                     <tr class="govuk-table__row">
@@ -279,9 +277,9 @@
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/users/reset-password/start">Password reset</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
                         <td class="govuk-table__cell"></td>
-                        <td class="govuk-table__cell">Journey not explored</td>
+                        <td class="govuk-table__cell">Tested well with 4 users, needs testing with a few more users</td>
                     </tr>
 
                     <tr class="govuk-table__row">
@@ -320,10 +318,10 @@
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v7/l2/users/view/all">User list</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/view/all">User list inc. filter/sort</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
                         <td class="govuk-table__cell">Yes</td>
-                        <td class="govuk-table__cell">Initially tested well, full user need not yet understoods</td>
+                        <td class="govuk-table__cell">Iteration tested well in the most recent round of research</td>
                     </tr>
 
                     <tr class="govuk-table__row">
@@ -335,7 +333,7 @@
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/users/add/start">Add a new user</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
                         <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Users have been able to complete task but multiple ways to do this and not all journeys explored</td>
                     </tr>
@@ -349,16 +347,16 @@
 
                      <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/users/view/single">Delete user</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
                         <td class="govuk-table__cell">Yes</td>
-                        <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
+                        <td class="govuk-table__cell">Tests well and meets MVP requiremnts, further investigation may be required</td>
                     </tr>
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l3/dashboard">Organisation admin dashboard</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
                         <td class="govuk-table__cell"></td>
-                        <td class="govuk-table__cell">Tested well with one user so far</td>
+                        <td class="govuk-table__cell">Tested well and will work for MVP, possible redundant page, might be worth testing without this page in the future</td>
                     </tr>
 
                 </tbody>
