First commit for adding additional orgs to user

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -371,7 +371,7 @@
                         <td class="govuk-table__cell"><a href="/v7/l2/users/view/single">Delete user</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
                         <td class="govuk-table__cell">Yes</td>
-                        <td class="govuk-table__cell">Tests well and meets MVP requiremnts, further investigation may be required</td>
+                        <td class="govuk-table__cell">Tests well and meets MVP requirements, further investigation may be required</td>
                     </tr>
 
                     <tr class="govuk-table__row">
