Added Salvation Army to orgs

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -101,6 +101,13 @@
                                         }
                                     },
                                     {
+                                        value: "The Salvation Army Employment Plus",
+                                        text: "The Salvation Army Employment Plus",
+                                        attributes: {
+                                            "data-machine": "salvationarmy.org.uk"
+                                        }
+                                    },
+                                    {
                                         value: "London Borough of Croydon Council",
                                         text: "London Borough of Croydon Council",
                                         attributes: {
