CSS tweak for typeahead width

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -732,3 +732,7 @@ p.govuk-filter-reset {
 .sort-header-toggle.sorted-descending::after {
     border-top: 8px solid $govuk-link-colour;
 }
+
+
+
+.autocomplete__hint,.autocomplete__input{width:150%}
