--- a/app/views/index.html
+++ b/app/views/index.html
@@ -233,6 +233,9 @@
                 <li>
                     Added a <a href="/v7/l2/users/view/all">basic search</a> - search by complete email address
                 </li>
+                <li>
+                    Added a new journey for <a href="/v7/l2/users/add-multiple-orgs/start">adding a user to multiple organisations</a>
+                </li>
             </ul>
 
             <h3 class="govuk-heading-s">Confidence level</h3>
