Added new org to index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -108,6 +108,13 @@
                                         }
                                     },
                                     {
+                                        value: "Clarion Futures Jobs & Training",
+                                        text: "Clarion Futures Jobs & Training",
+                                        attributes: {
+                                            "data-machine": "clarionhg.com"
+                                        }
+                                    },
+                                    {
                                         value: "London Borough of Croydon Council",
                                         text: "London Borough of Croydon Council",
                                         attributes: {
