--- a/app/views/v7/l3/users/search/search-results-none.html
+++ b/app/views/v7/l3/users/search/search-results-none.html
@@ -14,13 +14,13 @@
 
 {% block content %}
 
-{% if data['user-search'] | lower == 'jacob.burns@peopleplus.co.uk' %}
+{% if data['user-search'] | lower == 'jacob.burns@clarionhg.com' %}
 <script>
     window.location.href = 'search-results-success-jb'
 </script>
 {% endif %}
 
-{% if data['user-search'] | lower == 'harpal.singh@peopleplus.co.uk' %}
+{% if data['user-search'] | lower == 'harpal.singh@clarionhg.com' %}
 <script>
     window.location.href = 'search-results-success-hs'
 </script>
