--- a/app/views/v7/l3/users/search/search-results-success-jb.html
+++ b/app/views/v7/l3/users/search/search-results-success-jb.html
@@ -64,7 +64,7 @@
                                 </th>
 
                                 <td class="govuk-table__cell">
-                                    PeoplePlus
+                                    Clarion Futures Jobs & Training
                                 </td>
 
                                 <td class="govuk-table__cell">
