--- a/app/views/v7/l2/users/view/includes/org-user-view-search.html
+++ b/app/views/v7/l2/users/view/includes/org-user-view-search.html
@@ -4,8 +4,8 @@
                         Search for a user
                     </label>
 
-                    <span id="user-search-hint" class="govuk-hint">
-                        Enter the user's full email address
+                    <span id="user-search-hint" class="govuk-hint govuk-!-font-size-24">
+                        Enter the user's full email addressdddd
                     </span>
 
                     <form action="/v7/l2/users/search/search-results-none" method="post" class="form">
