--- a/app/views/v7/l2/users/view/includes/user-view-heading-add-search.html
+++ b/app/views/v7/l2/users/view/includes/user-view-heading-add-search.html
@@ -12,7 +12,7 @@
                         Search for a user
                     </label>
 
-                    <span id="user-search-hint" class="govuk-hint">
+                    <span id="user-search-hint" class="govuk-hint govuk-!-font-weight-bold" style="color:#0b0c0c">
                         Enter the user's full email address
                     </span>
                     <form action="/v7/l2/users/search/search-results-none" method="post" class="form">
