Update to changes list

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -243,6 +243,9 @@
                 <li>
                     Added a new journey for <a href="/v7/l2/users/add-multiple-orgs/start">adding a user to multiple organisations</a>
                 </li>
+                <li>
+                    Increased prominence of user search box hint text due to some users not noticing it
+                </li>
             </ul>
 
             <h3 class="govuk-heading-s">Confidence level</h3>
